assets/css/lab.css
body {
  margin: 0;
  background: #f4f7f6;
  font-family: 'Roboto', sans-serif;
}
h1, h2, h3, h4, h5, h6 {
  margin: 0;
  font-weight: 500;
}
p {
  margin: 0;
}
figure {
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.head-title {
  margin-left: 1.2%;
  padding-bottom: 2rem;
  text-align: center;  
}
  .head-title h2 {
    color: #444;
  }

ul {
  list-style: none;
  padding: 0;
  margin: 0 0 1.3em 0;
}
ul::after {
  content: ".";
  clear: both;
  visibility: hidden;
  display: block;
  height: 0;
}
ul > li {
  width: 32%;
  float: left;
  margin-left: 1.2%;
}
ul > li img {
  width: 100%;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  
}
  ul > li img:hover {
    -webkit-transition: scale(1.05);
    transform: scale(1.05);
    opacity: 0.5;
  }

.thumb {
  background: white;
}
  .thumb h3 {
    font-size: 16px;
  }
  .thumb a {
    text-decoration: none;
    font-weight: 500;
    color: black;
  }
    .thumb a:hover {
      text-decoration: underline;
    }
  .thumb .technologies {
    font-size: 14px;
    color: #888;
  }
.thumb-body {
  padding: 1.2rem;
}
.row {
  margin-bottom: .7rem;
}

.block {
  padding-top: 2rem;
}
.inner {
  max-width: 1240px;
  margin: 0 auto;
}


.icon {
  width: 25px;
  height: 25px;
}
.social-icons a {
  text-decoration: none;
}

